--- a/src/Components/login/Login.css
+++ b/src/Components/login/Login.css
@@ -14,6 +14,11 @@
   box-shadow: 0px 15px 20px 0px rgba(128, 128, 128, 0.76);
 }
 
+#LoginPage{
+  background-position: center;
+  background-size: cover;
+}
+
 .login {
   position: relative;
 }
@@ -99,6 +104,7 @@
 
   .btn-signin {
     width: 80%;
+    margin-left: 3vw;
   }
 
   .title span {
