--- a/src/Components/card/Card.css
+++ b/src/Components/card/Card.css
@@ -10,6 +10,12 @@
   box-shadow: 0.2rem 0.3rem 0.8rem rgba(0, 0, 0, 0.5);
 }
 
+.fa-heart:hover{
+  cursor: pointer;
+}
 
+.fa-heart-o:hover{
+  cursor: pointer;
+}
 
 
